# low-latency-prediction-market-engine

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
include/: alpha_base.hpp  async_logger.hpp  engine_config.hpp  market_parser.hpp  momentum_alpha.hpp  ofi_alpha.hpp  order_book.hpp  position_manager.hpp  strategy_engine.hpp  websocket_client.hpp
src/: main.cpp  strategy_engine.cpp  websocket_client.cpp
tests/: test_main.cpp
tools/: dashboard.py  gen_self_signed_cert.sh  mock_wss_server.py  record_polymarket.py  replay_server.py
